tooling/nargo_cli/tests/snapshots/execution_success/inactive_signed_bitshift/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "active",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 16
        },
        "visibility": "public"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "signed",
        "width": 16
      },
      "visibility": "public"
    },
    "error_types": {
      "5421095327929394772": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      },
      "11019205087382408538": {
        "error_kind": "string",
        "string": "Field failed to decompose into specified 4 limbs"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _59",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : [_2]",
    "BLACKBOX::RANGE [(_0, 1)] []",
    "BLACKBOX::RANGE [(_1, 16)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 65520 ], EXPR [ 65536 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "BLACKBOX::RANGE [(_4, 16)] []",
    "EXPR [ (1, _1) (-65536, _3) (-1, _4) 65520 ]",
    "EXPR [ (-1, _0, _3) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _1, _0) 0 ], EXPR [ 4 ], EXPR [ 2 ]], outputs: [[_5, _6, _7, _8]]",
    "BLACKBOX::RANGE [(_5, 1)] []",
    "BLACKBOX::RANGE [(_6, 1)] []",
    "BLACKBOX::RANGE [(_7, 1)] []",
    "BLACKBOX::RANGE [(_8, 1)] []",
    "EXPR [ (1, _0, _1) (-1, _5) (-2, _6) (-4, _7) (-8, _8) 0 ]",
    "EXPR [ (1, _8, _8) (2, _8) (-1, _9) 1 ]",
    "EXPR [ (-1, _7) (-1, _10) 1 ]",
    "EXPR [ (2, _7, _9) (1, _9, _10) (-1, _11) 0 ]",
    "EXPR [ (1, _11, _11) (-1, _12) 0 ]",
    "EXPR [ (-1, _6) (-1, _13) 1 ]",
    "EXPR [ (2, _6, _12) (1, _12, _13) (-1, _14) 0 ]",
    "EXPR [ (1, _14, _14) (-1, _15) 0 ]",
    "EXPR [ (-1, _5) (-1, _16) 1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 32768 ]], outputs: [_17, _18]",
    "BLACKBOX::RANGE [(_17, 1)] []",
    "BLACKBOX::RANGE [(_18, 15)] []",
    "EXPR [ (1, _1) (-32768, _17) (-1, _18) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 131072 ], EXPR [ 131072 ]], outputs: [_19, _20]",
    "BLACKBOX::RANGE [(_19, 1)] []",
    "BLACKBOX::RANGE [(_20, 17)] []",
    "EXPR [ (1, _1) (-131072, _19) (-1, _20) 131072 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _19, _17) (1, _1) (-1, _17) (-1, _19) 1 ], EXPR [ 65536 ]], outputs: [_21, _22]",
    "BLACKBOX::RANGE [(_21, 1)] []",
    "BLACKBOX::RANGE [(_22, 16)] []",
    "EXPR [ (2, _17, _19) (1, _1) (-1, _17) (-1, _19) (-65536, _21) (-1, _22) 1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _15, _5) (1, _15, _16) 0 ], EXPR [ 32768 ]], outputs: [_23, _24]",
    "BLACKBOX::RANGE [(_23, 1)] []",
    "BLACKBOX::RANGE [(_24, 15)] []",
    "EXPR [ (2, _5, _15) (-1, _57) 0 ]",
    "EXPR [ (1, _15, _16) (-1, _58) 0 ]",
    "EXPR [ (-32768, _23) (-1, _24) (1, _57) (1, _58) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _22) 0 ], EXPR [ 32768 ]], outputs: [_25, _26]",
    "BLACKBOX::RANGE [(_25, 1)] []",
    "BLACKBOX::RANGE [(_26, 15)] []",
    "EXPR [ (1, _22) (-32768, _25) (-1, _26) 0 ]",
    "EXPR [ (-1, _27) (-1, _57) (-1, _58) 32768 ]",
    "EXPR [ (2, _23, _27) (-1, _59) 0 ]",
    "EXPR [ (-1, _28) (1, _57) (1, _58) (1, _59) 0 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _28) 0 ]], outputs: [_29]",
    "EXPR [ (1, _28, _29) (1, _30) -1 ]",
    "EXPR [ (1, _28, _30) 0 ]",
    "EXPR [ (1, _0, _30) 0 ]",
    "BRILLIG CALL func 0: PREDICATE: EXPR [ (1, _0) 0 ]",
    "inputs: [EXPR [ (-2, _22, _25) (1, _22) (65536, _25) 0 ], EXPR [ (2, _15, _5) (1, _15, _16) (2, _27, _23) 0 ]], outputs: [_31, _32]",
    "BLACKBOX::RANGE [(_31, 16)] []",
    "BLACKBOX::RANGE [(_32, 16)] []",
    "EXPR [ (-1, _0) (-1, _32) (-1, _33) (1, _57) (1, _58) (1, _59) 0 ]",
    "BLACKBOX::RANGE [(_33, 16)] []",
    "EXPR [ (-1, _34) (1, _57) (1, _58) (1, _59) 0 ]",
    "EXPR [ (1, _31, _34) (1, _32) (-1, _35) 0 ]",
    "EXPR [ (-2, _22, _25) (1, _22) (65536, _25) (-1, _36) 0 ]",
    "EXPR [ (-1, _0, _35) (1, _0, _36) 0 ]",
    "EXPR [ (-1, _31) (-1, _37) 32768 ]",
    "EXPR [ (-2, _23, _25) (1, _23) (1, _25) (-1, _38) 0 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _31) 0 ]], outputs: [_39]",
    "EXPR [ (1, _31, _39) (1, _40) -1 ]",
    "EXPR [ (1, _31, _40) 0 ]",
    "EXPR [ (2, _37, _38) (1, _31) (-1, _41) 0 ]",
    "EXPR [ (-1, _40) (-1, _42) 1 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _32) 0 ]], outputs: [_43]",
    "EXPR [ (1, _32, _43) (1, _44) -1 ]",
    "EXPR [ (1, _32, _44) 0 ]",
    "EXPR [ (-2, _25, _32) (65536, _25) (1, _32) (-1, _45) 0 ]",
    "EXPR [ (-1, _44) (-1, _46) 1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-2, _19, _17) (1, _41, _42) (1, _17) (1, _19) 131071 ], EXPR [ 65536 ]], outputs: [_47, _48]",
    "BLACKBOX::RANGE [(_47, 2)] []",
    "BLACKBOX::RANGE [(_48, 16)] []",
    "EXPR [ (-2, _17, _19) (1, _41, _42) (1, _17) (1, _19) (-65536, _47) (-1, _48) 131071 ]",
    "EXPR [ (-1, _0, _48) (1, _2) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(5), bit_size: Integer(U32), value: 0 }, Const { destination: Direct(6), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(7), bit_size: Integer(U32), value: 3 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(7), offset_address: Direct(5) }, Cast { destination: Direct(1), source: Direct(1), bit_size: Integer(U32) }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, BinaryIntOp { destination: Direct(7), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(3), op: IntegerDiv, lhs: Direct(0), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Mul, lhs: Direct(3), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Sub, lhs: Direct(0), rhs: Direct(4) }, Store { destination_pointer: Direct(9), source: Direct(4) }, BinaryIntOp { destination: Direct(9), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(6) }, Mov { destination: Direct(0), source: Direct(3) }, BinaryIntOp { destination: Direct(8), op: LessThan, bit_size: U32, lhs: Direct(9), rhs: Direct(7) }, JumpIf { condition: Direct(8), location: 7 }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, Stop { return_data: HeapVector { pointer: Direct(9), size: Direct(1) } }]",
    "unconstrained func 2",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_to_radix",
    "directive_invert"
  ]
}
